--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "d3-fetch": "^1.1.2",
+    "d3-geo": "^1.11.9",
+    "d3-geo-projection": "^2.8.1",
+    "d3-scale": "^3.2.1",
+    "lodash-es": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
-    "react-scripts": "3.3.1"
+    "react-leaflet-choropleth": "^2.0.1",
+    "react-scripts": "3.3.1",
+    "react-simple-maps": "^1.0.0-beta.0"
   },
   "scripts": {
     "start": "react-scripts start",
